added more stuff to my work file

--- a/CarolineWork.ipynb
+++ b/CarolineWork.ipynb
@@ -13,7 +13,7 @@
    "id": "71e55bb8-8c3d-4316-9027-f93fd7baeb06",
    "metadata": {},
    "source": [
-    "### What do we need? "
+    "### What we might need to think about:"
    ]
   },
   {
@@ -83,9 +83,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ba29ce41-2285-41f1-aaba-4a719d4a26de",
+   "metadata": {},
+   "source": [
+    "### Components that might be helpful from landlab:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01a8ddd-571f-493c-9bec-93d2d3a08b94",
+   "metadata": {},
+   "source": [
+    "- Sediment\n",
+    "    - NetworkSedimentTransporter\n",
+    "    - SedDepEroder\n",
+    "- Erosion\n",
+    "    - DepthSlopeProductErosion\n",
+    "    - FastscapeEroder\n",
+    "    - LateralEroder\n",
+    "    - GravelBedrockEroder\n",
+    "    - StreamPowerEroder\n",
+    "- Flow\n",
+    "    - FlowAccumulator\n",
+    "    - KinwaveImplicitOverlandFlow\n",
+    "    - KinwaveOverlandFlowModel\n",
+    "    - LinearDiffusionOverlandFlowRouter\n",
+    "- Pecipitation\n",
+    "    - PrecipitationDistribution\n",
+    "- Discharge\n",
+    "    - DimensionlessDischarge\n",
+    "    - DischargeDiffuser\n",
+    "    - LinearDiffuser\n",
+    "    - LinearDiffusionOverlandFlowRouter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b246e94d-af92-4133-969d-f83a66c5953d",
+   "metadata": {},
+   "source": [
+    "### MAYBE things that each of us can focus on, can deff add things and change things: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "580715b9-20d4-45a5-a8a3-859eddb00f80",
+   "metadata": {},
+   "source": [
+    "1. Someone focus on water flow and increase with precitation\n",
+    "2. Someone focus on sediment movement with increase discharge and changes in sediment size\n",
+    "3. Someone focus on differences in vegetation in watershed/banks and see how that will change how flooding will work (less infiltration of water on slopes due to less veg, more sediment movement due to no roots keeping the sediment stable)\n",
+    "4. Someone focus on sacrificing all first borns to make sure we do well\n",
+    "5. Someone focus on moral of team\n",
+    "6. Someone focus on man made infrastructure (like dams) and change dam release to see if it can help manage flooding or not\n",
+    "7. Someone focus on changing bedforms due to increase/ decrease water levels: moving rippels/ dunes, creating new channels?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "841d37fb-c1e3-4945-9924-99184d6ec387",
+   "id": "22c0ae62-c0df-4c01-a751-12e36ef8a47a",
    "metadata": {},
    "outputs": [],
    "source": []
