--- a/CarolineWork.ipynb
+++ b/CarolineWork.ipynb
@@ -193,9 +193,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19faeb89-e243-4ddc-a092-c85c06e37717",
+   "metadata": {},
+   "source": [
+    "# Group Talk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "930463d9-f28b-4007-af4f-c965b4684655",
+   "metadata": {},
+   "source": [
+    "- Short term scale - how rainfall intensity effects channel migration\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8632ff36-f55f-4edc-89e5-7ecb7a5a8a3e",
+   "id": "b1c43c60-1f3c-4efd-a1fe-1ca9df73a8e1",
    "metadata": {},
    "outputs": [],
    "source": []
